# defi-risk-scanner

./: README.md  pyproject.toml
defi_risk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: ai_analyzer.py  analyzer.py  cli.py  onchain.py  protocols.py  reporter.py
tests/: test_analyzer.py  test_protocols.py
