[project]
name = "defi-risk"
version = "0.1.0"
description = "DeFi Protocol Risk Scanner — AI-powered on-chain risk analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
defi-risk = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
